--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,14 @@ version: '3.8'
 services:
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2019-latest
-    container_name: sqlserver
     environment:
-      - ACCEPT_EULA=Y
-      - MSSQL_SA_PASSWORD=cesusc2024
-      - MSSQL_PID=Express
+      SA_PASSWORD: "SqlServer2019!"
+      ACCEPT_EULA: "Y"
+      MSSQL_PID: "Developer"
     ports:
       - "1433:1433"
     volumes:
-      - sqlserverdata:/var/opt/mssql
+      - sqlserverdata-v5:/var/opt/mssql
 
 volumes:
-  sqlserverdata:
+  sqlserverdata-v5:
